@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclWinLoad.c,v 1.15 2002/10/10 12:25:53 vincentdarley Exp $
+ * RCS: @(#) $Id: tclWinLoad.c,v 1.15.2.1 2010/11/03 22:10:48 andreas_kupries Exp $
  */
 
 #include "tclWinInt.h"
@@ -56,7 +56,8 @@ TclpDlopen(interp, pathPtr, loadHandle, unloadProcPtr)
      * using a relative path.
      */
     nativeName = Tcl_FSGetNativePath(pathPtr);
-    handle = (*tclWinProcs->loadLibraryProc)(nativeName);
+    handle = (*tclWinProcs->loadLibraryExProc)(nativeName, NULL,
+	       LOAD_WITH_ALTERED_SEARCH_PATH);
     if (handle == NULL) {
 	/* 
 	 * Let the OS loader examine the binary search path for
@@ -66,7 +67,8 @@ TclpDlopen(interp, pathPtr, loadHandle, unloadProcPtr)
 	Tcl_DString ds;
         char *fileName = Tcl_GetString(pathPtr);
 	nativeName = Tcl_WinUtfToTChar(fileName, -1, &ds);
-	handle = (*tclWinProcs->loadLibraryProc)(nativeName);
+	handle = (*tclWinProcs->loadLibraryExProc)(nativeName, NULL,
+			LOAD_WITH_ALTERED_SEARCH_PATH);
 	Tcl_DStringFree(&ds);
     }
 
